Finished implementation of rmi-server